fix: 조회수 추가 및 메인페이지 카드 수정

--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -137,17 +137,56 @@
       }
       .card-bottom {
         display: flex;
-        div:first-child {
+        flex-wrap: wrap;
+        gap: 0px 12px;
+        margin-top: 8px;
+        .item {
+          height: 14px; line-height: 14px;
+          padding: 6px 10px;
+          background: #F3F3F3;
+          border-radius: 16px;
+          font-size: .88rem; 
+          text-align: center;
+        }
+        .category-name {
+          height: 16px; line-height: 16px;
+          padding: 6px 10px;
+          background: rgba(62, 130, 241, 0.26);
+          border-radius: 16px;
+          color: #00348A;
+          font-size: .88rem; 
+          text-align: center;
+        }
+        .d-day {
+          font-weight: 600;
+          color: #3E82F1;
+        }
+        .com-tool {
+          font-weight: 500;
+          color: #484848;
+        }
+        .rec-cnt {
+          font-weight: 500;
+          color: #737373;
+          strong {
+            font-weight: 500;
+            color: #181818;
+          }
+        }
+        .gap {
           flex-grow: 1;
         }
-        .gather-d-day {
-          width: 50px; height: 20px; line-height: 20px;
-          padding: 2px 6px 3px; margin-top: 8px;
-          background: #3E82F1;
-          border-radius: 12px;
-          font-size: .75rem; font-weight: 700;
-          text-align: center;
-          color: #ffffff;
+        .views {
+          display: flex;
+          // margin-left: 230px;
+          line-height: 26px;
+          font-size: .75rem; font-weight: 500;
+          color: #A1A2A3;
+          img {
+            width: 16px; height: 16px;
+            margin-top: 5px;
+            margin-right: 8px;
+          }
         }
       }
     }
