--- a/assets/scss/main-page/card.scss
+++ b/assets/scss/main-page/card.scss
@@ -153,7 +153,7 @@
           opacity: 0.5;
         }
         .category-name {
-          height: 16px; line-height: 16px;
+          line-height: 16px;
           padding: 6px 10px;
           background: rgba(62, 130, 241, 0.26);
           border-radius: 16px;
