--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -76,6 +76,11 @@
       .selected {
         background-color: #EBEEF1EA;
       }
+      #category-about-us {
+        padding-bottom: 24px;
+        border-bottom: 1px solid #E7E7E7;
+        margin-bottom: 24px;
+      }
     }
     .category-wrp {
       margin-top: 24px;
