feat: 모바일 UI about us 페이지 추가

--- a/assets/scss/login/login-popup.scss
+++ b/assets/scss/login/login-popup.scss
@@ -6,7 +6,7 @@
     position: fixed;
     width: 100vw; height: 100vh;
     top: 0; left: 0;
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     .popup-top {
       .close-btn {
         margin-top: 40px; margin-right: 20px;
