feat: 전체 카테고리 추가

--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -1,5 +1,15 @@
 @import '@/assets/scss/util.scss';
 
+.category-wrp {
+
+}
+
+.category-wrp-m {
+  #Category {
+    width: 270px; height: 100vh;
+  }
+}
+
 #Category {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
