style: 사파리 카테고리 검색 넓이 에러 수정

--- a/assets/scss/main-page/category.scss
+++ b/assets/scss/main-page/category.scss
@@ -103,6 +103,7 @@
         border: 1px solid #E7E7E7;
         border-radius: 8px;
         .total-search {
+          width: 180px;
           flex-grow: 1;
           padding-left: 12px;
           font-size: .88rem;
