--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -20,4 +20,12 @@ body {
   margin-top: 15px;
   margin-bottom: 10px;
   opacity: 0;
+  position: relative;
+}
+
+#fileInput.dragdrop > div > .custom-file > input {
+  cursor: pointer;
+  z-index: 0 !important;
+  width: 140px;
+  position: absolute;
 }
