--- a/assets/scss/main-page/top-bar.scss
+++ b/assets/scss/main-page/top-bar.scss
@@ -16,6 +16,18 @@
       img {
         width: 4vmin;
       }
+
+      @include tablet {
+        img {
+          width: 25px;
+        }
+      }
+
+      @include lands-tablet {
+        img {
+          width: 25px;
+        }
+      }
     }
     .logo-wrp {
       flex-grow: 1;
@@ -38,6 +50,18 @@
           width: 8vmin;
           border-radius: 6px;
           box-shadow: 0px 0px 4px rgba(0, 52, 138, 0.04), 0px 4px 8px rgba(0, 52, 138, 0.06);
+        }
+
+        @include tablet {
+          img {
+            width: 42px;
+          }
+        }
+
+        @include lands-tablet {
+          img {
+            width: 42px;
+          }
         }
 
         .open-account {
@@ -94,10 +118,16 @@
     }
   }
   .bottom {
-    height: 7vh;
+    height: 6vh;
     background-color: #FAFAFA;
     .category-wrp {
       display: flex; line-height: 62px;
+      
+
+      @include lands-phone {
+        line-height: 32px;
+      }
+
       div:first-child {
         margin-left: 24px;
         font-size: .88rem; font-weight: 500;
@@ -111,6 +141,22 @@
       }
       div:nth-child(3) {
         font-size: .88rem; font-weight: 600;
+      }
+
+      @include tablet {
+        div:first-child {
+          font-size: 18px; font-weight: 500;
+          color: #4D4D4D;
+        }
+        div:nth-child(2) {
+          img {
+            width: 10px; height: 12px;
+            margin: 0 20px;
+          }
+        }
+        div:nth-child(3) {
+          font-size: 18px; font-weight: 600;
+        }
       }
     }
   }
